corpus/strings.txt
================================================================================
Literal strings with spaces
================================================================================

number "Cool string with spaces";

--------------------------------------------------------------------------------

(source_file
  (keyvalue
    (identifier)
    (value
      (basic_value
        (string_literal)))))

================================================================================
Literal strings with escapes
================================================================================

number "Cool string\\n with spaces";

--------------------------------------------------------------------------------

(source_file
  (keyvalue
    (identifier)
    (value
      (basic_value
        (string_literal
          (escape_sequence))))))

================================================================================
Literal strings as keyword names
================================================================================

".*Wall" 1.0;

--------------------------------------------------------------------------------

(source_file
  (keyvalue
    (string_literal)
    (value
      (basic_value
        (number_literal)))))
